--- a/ttcr/ttcr_u.1
+++ b/ttcr/ttcr_u.1
@@ -3,11 +3,11 @@
 .\"man mdoc.samples for a complete listing of options
 .\"man mdoc for the short list of editing options
 .\"/usr/share/misc/mdoc.template
-.Dd 2014-04-03               \" DATE 
-.Dt ttcr 1      \" Program name and manual section number 
+.Dd 2012-09-20               \" DATE 
+.Dt ttcr_u 1      \" Program name and manual section number 
 .Os Darwin
 .Sh NAME                 \" Section Header - required - don't modify 
-.Nm ttcr,
+.Nm ttcr_u,
 .\" The following lines are read in generating the apropos(man -k) database. Use only key
 .\" words here as the database is built based on the words here and in the .ND line. 
 .Nm Other_name_for_same_program(),
