--- a/examples/example3.ipynb
+++ b/examples/example3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ce0e1f0d",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "712bdd4d",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1380b58a",
    "metadata": {},
    "outputs": [],
@@ -102,19 +102,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a7650c4f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# make realistic values of velocity\n",
-    "velocity = 4000.0 + 300.0*m.flatten()\n",
+    "fac = 200.0\n",
+    "velocity = 4000.0 + fac * m.flatten()\n",
     "\n",
     "# Assign slowness to grid\n",
     "grid.set_slowness(1.0/velocity)\n",
     "\n",
     "# Save to VTK format to visualize\n",
-    "grid.to_vtk({'Velocity': velocity}, 'example3')"
+    "grid.to_vtk({'Velocity': velocity}, 'example3_vel')"
    ]
   },
   {
@@ -131,19 +132,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "770656ff",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define the source location\n",
     "src = np.array([[9.0, 4.3, 124.2],\n",
-    "                [4.1, 253.4, 119.7]])\n",
+    "                [4.1, 241.4, 119.7]])\n",
     "\n",
     "# Define some receivers\n",
     "rcv = np.array([[222.2, 3.4, 1.2],\n",
     "                [206.8, 155.4, 3.3],\n",
-    "                [178.9, 253.1, 10.4]])\n",
+    "                [178.9, 251.1, 10.4]])\n",
     "\n",
     "# Make src & rcv pairs\n",
     "\n",
@@ -192,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
