updated example to run with newer version of gmsh

--- a/examples/example2.ipynb
+++ b/examples/example2.ipynb
@@ -43,7 +43,30 @@
    "execution_count": 2,
    "id": "emotional-panama",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Info    : Clearing all models and views...\n",
+      "Info    : Done clearing all models and views\n",
+      "Info    : Meshing 1D...\n",
+      "Info    : [  0%] Meshing curve 10 (Nurb)\n",
+      "Info    : [ 20%] Meshing curve 11 (Line)\n",
+      "Info    : [ 30%] Meshing curve 12 (Nurb)\n",
+      "Info    : [ 50%] Meshing curve 13 (Line)\n",
+      "Info    : [ 60%] Meshing curve 14 (Line)\n",
+      "Info    : [ 80%] Meshing curve 15 (Line)\n",
+      "Info    : [ 90%] Meshing curve 16 (Line)\n",
+      "Info    : Done meshing 1D (Wall 0.0158059s, CPU 0.014652s)\n",
+      "Info    : Meshing 2D...\n",
+      "Info    : [  0%] Meshing surface 31 (Plane, Frontal-Delaunay)\n",
+      "Info    : [ 50%] Meshing surface 32 (Plane, Frontal-Delaunay)\n",
+      "Info    : Done meshing 2D (Wall 0.0854648s, CPU 0.081676s)\n",
+      "Info    : 2390 nodes 4929 elements\n"
+     ]
+    }
+   ],
    "source": [
     "gmsh.initialize()\n",
     "\n",
@@ -119,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "monthly-terry",
    "metadata": {},
    "outputs": [],
@@ -142,13 +165,13 @@
     "        \n",
     "        if name == 'surface':\n",
     "            for tag in np.unique(elemNodeTags[0]):\n",
-    "                node, _ = gmsh.model.mesh.getNode(tag)\n",
-    "                surface.append(node)\n",
+    "                node = gmsh.model.mesh.getNode(tag)\n",
+    "                surface.append(node[0])\n",
     "        elif name == 'reflector':\n",
     "            # get coordinates of the nodes on the interface\n",
     "            for tag in np.unique(elemNodeTags[0]):\n",
-    "                node, _ = gmsh.model.mesh.getNode(tag)\n",
-    "                reflector.append(node)\n",
+    "                node = gmsh.model.mesh.getNode(tag)\n",
+    "                reflector.append(node[0])\n",
     "        \n",
     "    elif dim == 2:\n",
     "        # assign velocity\n",
@@ -178,10 +201,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
+   "id": "4fd3a0a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function getNode in module gmsh:\n",
+      "\n",
+      "getNode(nodeTag)\n",
+      "    gmsh.model.mesh.getNode(nodeTag)\n",
+      "    \n",
+      "    Get the coordinates and the parametric coordinates (if any) of the node\n",
+      "    with tag `tag', as well as the dimension `dim' and tag `tag' of the entity\n",
+      "    on which the node is classified. This function relies on an internal cache\n",
+      "    (a vector in case of dense node numbering, a map otherwise); for large\n",
+      "    meshes accessing nodes in bulk is often preferable.\n",
+      "    \n",
+      "    Return `coord', `parametricCoord', `dim', `tag'.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(gmsh.model.mesh.getNode)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "needed-clone",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/j6/s0152dxj3q54bsjvw2s42b0m0000gn/T/ipykernel_62610/2543456425.py:19: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "  nodes = np.array(nodes)   # convert to numpy array\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [6], line 23\u001b[0m\n\u001b[1;32m     20\u001b[0m nodes \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mc_[nodes[:, \u001b[38;5;241m0\u001b[39m], nodes[:, \u001b[38;5;241m2\u001b[39m]]  \u001b[38;5;66;03m# keep only x & z\u001b[39;00m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;66;03m# sort coordinates (for later plotting)\u001b[39;00m\n\u001b[0;32m---> 23\u001b[0m ind \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43margsort\u001b[49m\u001b[43m(\u001b[49m\u001b[43msurface\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     24\u001b[0m surface \u001b[38;5;241m=\u001b[39m surface[ind, :]\n\u001b[1;32m     25\u001b[0m ind \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39margsort(reflector[:, \u001b[38;5;241m0\u001b[39m])\n",
+      "File \u001b[0;32m<__array_function__ internals>:180\u001b[0m, in \u001b[0;36margsort\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "File \u001b[0;32m/opt/local/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/numpy/core/fromnumeric.py:1120\u001b[0m, in \u001b[0;36margsort\u001b[0;34m(a, axis, kind, order)\u001b[0m\n\u001b[1;32m   1012\u001b[0m \u001b[38;5;129m@array_function_dispatch\u001b[39m(_argsort_dispatcher)\n\u001b[1;32m   1013\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21margsort\u001b[39m(a, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, kind\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, order\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[1;32m   1014\u001b[0m     \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m   1015\u001b[0m \u001b[38;5;124;03m    Returns the indices that would sort an array.\u001b[39;00m\n\u001b[1;32m   1016\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1118\u001b[0m \n\u001b[1;32m   1119\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m-> 1120\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_wrapfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43margsort\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkind\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mkind\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43morder\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43morder\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/opt/local/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/numpy/core/fromnumeric.py:57\u001b[0m, in \u001b[0;36m_wrapfunc\u001b[0;34m(obj, method, *args, **kwds)\u001b[0m\n\u001b[1;32m     54\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m _wrapit(obj, method, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwds)\n\u001b[1;32m     56\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m---> 57\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mbound\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwds\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     58\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m     59\u001b[0m     \u001b[38;5;66;03m# A TypeError occurs if the object does have such a method in its\u001b[39;00m\n\u001b[1;32m     60\u001b[0m     \u001b[38;5;66;03m# class, but its signature is not identical to that of NumPy's. This\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     64\u001b[0m     \u001b[38;5;66;03m# Call _wrapit from within the except clause to ensure a potential\u001b[39;00m\n\u001b[1;32m     65\u001b[0m     \u001b[38;5;66;03m# exception has a traceback chain.\u001b[39;00m\n\u001b[1;32m     66\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m _wrapit(obj, method, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwds)\n",
+      "\u001b[0;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
+     ]
+    }
+   ],
    "source": [
     "slowness = np.array(slowness)   # convert to numpy array\n",
     "triangles = np.array(triangles)\n",
@@ -194,8 +270,8 @@
     "nodes = []\n",
     "for n, tag in enumerate(uniqueTags):\n",
     "    equiv[tag] = n\n",
-    "    node, _ = gmsh.model.mesh.getNode(tag)\n",
-    "    nodes.append(node)\n",
+    "    node = gmsh.model.mesh.getNode(tag)\n",
+    "    nodes.append(node[0])\n",
     "\n",
     "for n1 in range(triangles.shape[0]):\n",
     "    for n2 in range(triangles.shape[1]):\n",
@@ -471,7 +547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
