--- a/examples/example5.ipynb
+++ b/examples/example5.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "# Example 5 - anisotropy\n",
     "\n",
-    "Anisotropy has been implemented for the Shortest-Path method\n",
+    "Anisotropy has been implemented for the Shortest-Path method, for 2D grids and meshes.  This notebook shows two examples.\n",
     "\n",
     "### 5.1 Elliptical anisotropy on a rectilinear grid\n",
     "\n",
@@ -196,11 +196,11 @@
    "id": "1ea6ea4f",
    "metadata": {},
    "source": [
-    "### 5.2 Weakly anelliptical anisotropy\n",
+    "### 5.2 Weakly anelliptical anisotropy on triangular meshes\n",
     "\n",
     "In this section, we are looking at the formulation of Björn Rommel (https://github.com/bjornrommel/steinkauz/tree/master/project/ambiguity).\n",
     "\n",
-    "We will build a model as the one used to produce Fig 7 of the paper."
+    "Using gmsh, we will build a model as the one used to produce Fig 7 of the paper.  The model properties were obtained for Björn's GitHub repo.  A fourth layer was added with arbitrary properties."
    ]
   },
   {
@@ -487,7 +487,8 @@
     "r4[physical_model == 2] = TARGET['rrr4']\n",
     "r4[physical_model == 3] = BEDROCK['rrr4']\n",
     "\n",
-    "mesh.set_slowness(1/V)\n",
+    "mesh.set_slowness(1/V)   # With this implementation of weakly anelliptical anisotropy,\n",
+    "                         # we must use slowness in the vertical direction\n",
     "mesh.set_r2(r2)\n",
     "mesh.set_r4(r4)\n",
     "\n",
