--- a/examples/example1.ipynb
+++ b/examples/example1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "secret-calculation",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "plt.rcdefaults()\n",
-    "plt.style.use('seaborn-paper')\n",
+    "plt.style.use('seaborn-v0_8-paper')\n",
     "plt.rc('font', **{'family': 'sans-serif', 'sans-serif': ['Helvetica']})\n",
     "\n",
     "from ttcrpy.rgrid import Grid3d"
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "available-dutch",
    "metadata": {},
    "outputs": [],
@@ -79,10 +79,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "choice-murder",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/kd/v1qqm8qd15506q5jp_2tz_bw0000gn/T/ipykernel_33100/3904946752.py:15: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  tt, rays = grid.raytrace(src, rcv, return_rays=True)\n"
+     ]
+    }
+   ],
    "source": [
     "# Define the source location\n",
     "src = np.array([[0.5, 0.5, 0.5]])\n",
@@ -281,8 +290,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "8bf80c5a-02c4-4509-9cad-b8d6883273d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Solarize_Light2',\n",
+       " '_classic_test_patch',\n",
+       " '_mpl-gallery',\n",
+       " '_mpl-gallery-nogrid',\n",
+       " 'bmh',\n",
+       " 'classic',\n",
+       " 'dark_background',\n",
+       " 'fast',\n",
+       " 'fivethirtyeight',\n",
+       " 'ggplot',\n",
+       " 'grayscale',\n",
+       " 'petroff10',\n",
+       " 'seaborn-v0_8',\n",
+       " 'seaborn-v0_8-bright',\n",
+       " 'seaborn-v0_8-colorblind',\n",
+       " 'seaborn-v0_8-dark',\n",
+       " 'seaborn-v0_8-dark-palette',\n",
+       " 'seaborn-v0_8-darkgrid',\n",
+       " 'seaborn-v0_8-deep',\n",
+       " 'seaborn-v0_8-muted',\n",
+       " 'seaborn-v0_8-notebook',\n",
+       " 'seaborn-v0_8-paper',\n",
+       " 'seaborn-v0_8-pastel',\n",
+       " 'seaborn-v0_8-poster',\n",
+       " 'seaborn-v0_8-talk',\n",
+       " 'seaborn-v0_8-ticks',\n",
+       " 'seaborn-v0_8-white',\n",
+       " 'seaborn-v0_8-whitegrid',\n",
+       " 'tableau-colorblind10']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plt.style.available"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "horizontal-naples",
+   "id": "d92e3c00-4aa3-4367-91cb-7ddfda2ba91c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -304,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
